tests/typing/bad/testfile-arith-3.c

int main() { int p; struct S *q; putchar(p-q); }

